fixed top offset of content on mobile

--- a/client/styles/mobile.css
+++ b/client/styles/mobile.css
@@ -156,6 +156,7 @@
     }
 
     main {
+        padding-top: calc(1em + 56px) !important;
         padding-bottom: 5em;
     }
 
